# sentinel-levelup

./: README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 0001_create_transactions_table.sql
backend/src/: connection.rs  lib.rs  main.rs  model.rs  rpc_queries.rs  service.rs  utils.rs
backend/src/abi/: ERC20Abi.json
backend/src/graphql/: schema.rs
backend/src/mempool/: check_contract_type.rs  mempool.rs  mod.rs
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: connection.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/balance/: page.tsx
frontend/src/app/transactions/completed/: page.tsx
frontend/src/app/transactions/pending/: page.tsx
frontend/src/components/: Button.tsx  ConnectionButton.tsx  Drawer.tsx  DrawerChild.tsx  EachTxRow.tsx  EmptyData.tsx  Navbar.tsx  NetworkDropdown.tsx  Pagination.tsx  SearchInput.tsx  SinglePendingTransaction.tsx  SingleTransaction.tsx  Table.tsx  W3Button.tsx
frontend/src/contexts/: NFTContext.tsx  NFTProvider.tsx
frontend/src/hooks/: index.tsx
frontend/src/hooks/queries/: index.tsx
frontend/src/services/: instance.tsx
frontend/src/services/api/: index.tsx
frontend/src/services/queries/: index.ts
frontend/src/templates/: CustomLayout.tsx
frontend/src/types/: index.d.ts
frontend/src/utils/: constants.ts  nft.ts
smart-contract/: .env.example  hardhat.config.ts  package-lock.json  package.json
smart-contract/contracts/: SentinelNFT.sol
smart-contract/ignition/deployments/chain-534351/: deployed_addresses.json  journal.jsonl
smart-contract/ignition/deployments/chain-534351/artifacts/: SentinelNFTModule#SentinelNFT.dbg.json  SentinelNFTModule#SentinelNFT.json
smart-contract/ignition/modules/: SentinelNFT.ts
