[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "Sentinel is a blockchain transaction monitoring system that scans the mempool, processes transactions, and provides a GraphQL API for querying transaction data."
license = "MIT"
repository = "https://github.com/aagbotemi/sentinel-w3lc/backend"
keywords = ["blockchain", "mempool", "transactions", "graphql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-tungstenite = { version = "0.27.0", features = ["tokio-runtime", "tokio-native-tls"] }
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.125"
serde = { version = "1.0.207", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
log = "0.4.22"
thiserror = "1.0.63"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "derive", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
async-graphql = { version = "7.0.3" }
async-graphql-axum = { version = "7.0.7" }
axum = { version = "0.7.5", features = ["macros"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "188c4f8", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "rpc-client",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-wallet",
    "signer-yubihsm",
    "pubsub"
] }
tower-http = { version = "0.5.2", features = ["cors"] }